--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,4 +1,4 @@
 body{
-    background-color: rgb(70, 13, 13);
-    color: azure;
+    background-color: rgb(255, 255, 255);
+    color: rgb(255, 0, 0);
 }
