--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -2,6 +2,32 @@
 
 {% block content %}
 
-Página de login
+<main class="login">
+    <form class="form" action="" method="POST">
+        {% csrf_token %}
+
+        <div>
+            <label>Email</label>
+            <input id="email" name="email" type="text" placeholder="email" />
+        </div>
+
+        <div>
+        <label for="password">Password</label>
+            <input
+                  id="password"
+                  name="password"
+                  type="password"
+                  placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;"
+                />
+        </div>
+
+        <button type="submit">Login</button>
+
+        <div>
+            <a href="{% url 'register' %}">Criar Conta</a>
+        </div>
+
+    </form>
+</main>
 
 {% endblock content %}
