--- a/templates/main.html
+++ b/templates/main.html
@@ -1,22 +1,20 @@
 {% load static %}
-<<<<<<< HEAD
 <html lang="pt-br">
-=======
-<!DOCTYPE html>
-<html lang="en">
->>>>>>> 87dcd79c4569b20f97a736498f5c075a2283b315
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "styles/main.css" %}">
-    <link rel="stylesheet" href="{% static "styles/navbar.css" %}">
-    <link rel="stylesheet" href="{% static "styles/sidebar.css" %}">
-    <link rel="stylesheet" href="{% static "styles/home.css" %}">
+    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/sidebar.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/home.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/register.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/login.css' %}">
     <title>{% block title %}Focai{% endblock title %}</title>
 </head>
 <body>
 
     <div class="container">
+        
         {% include "sidebar.html" %}
         
         {% include "navbar.html" %}
@@ -27,6 +25,6 @@
         {% endblock content %}
 
     </div>
-    <script src="{% static "js/sideBarOpen.js" %}"></script>
+    <script src="{% static 'js/sideBarOpen.js' %}"></script>
 </body>
 </html>
