add: utils, add_study, correct_percentage, subjects_tab, add_subject, exclude_subject

--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -27,6 +27,15 @@
             <a href="{% url 'register' %}">Criar Conta</a>
         </div>
 
+        <div>
+            {% if error_user_not_exist %}
+                {{error_user_not_exist}}            
+            {% else %}
+                {{error_password_not_exist}}
+            {% endif %}
+
+        </div>
+
     </form>
 </main>
 
