--- a/templates/main.html
+++ b/templates/main.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="{% static 'styles/home.css' %}">
     <link rel="stylesheet" href="{% static 'styles/register.css' %}">
     <link rel="stylesheet" href="{% static 'styles/login.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/addstudy.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/subjects.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/delete_subject.css' %}">
     <title>{% block title %}Focai{% endblock title %}</title>
 </head>
 <body>
