--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -5,5 +5,9 @@
             <img src="{% static 'img/homeBtn.png' %}" alt="">
             <span>Home</span>
         </a>
+        <a href="{% url 'subjects' %}" class="sidebar_item">
+            <img src="{% static 'img/subjects.svg' %}" alt="">
+            <span>Disciplinas</span>
+        </a>
     </div>
 </div>
