--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -7,21 +7,33 @@
         <div class="page_title_container">
             <h1 class="page_title">Home</h1>
             
+            {% if request.user.is_authenticated %}
+            <a href="{% url 'addstudy' %}">Add Study</a>
+            {% endif %}
         </div>
         
         {% if request.user.is_authenticated %}
-            <h3>Welcome {{request.user.first_name}}</h3>
+            <h3>Seja bem-vindo(a) {{request.user.first_name}}</h3>
         {% endif %}
         
         <div class="data">
             <div class="study_time dataItem">
                 <div class="dataItem_title"><h4>TEMPO DE ESTUDO</h4></div>
-                <div class="dataItem_info"><h2>{{time_studied}}</h2></div>
+                {% if user.is_authenticated %}
+                <div class="dataItem_info"><h2>{{hours}}h{{minutes}}min</h2></div>
+                {% else %}
+                <div class="dataItem_info"><h2>00h00min</h2></div>
+                {% endif %}
             </div>
             <div class="performance dataItem">
-                <div class="dataItem_title"><h4>DESEMPENHO</h4></div>
-                <div class="dataItem_info"><h2>86%</h2></div>
+                <div class="dataItem_title">
+                    <h4>DESEMPENHO</h4>
+                    <p>{{correct_answers}} Acertos</p>
+                    <p>{{wrong_answers}} Erros</p>
+                </div>
+                <div class="dataItem_info"><h2>{{percent_correct_asw}}%</h2></div>
             </div>
-        </div>
+        </div>        
     </div>
+    
 {% endblock content %}
