modified:   base/__pycache__/__init__.cpython-312.pyc 	modified:   base/__pycache__/admin.cpython-312.pyc 	modified:   base/__pycache__/apps.cpython-312.pyc 	modified:   base/__pycache__/forms.cpython-312.pyc 	modified:   base/__pycache__/models.cpython-312.pyc 	modified:   base/__pycache__/urls.cpython-312.pyc 	modified:   base/__pycache__/views.cpython-312.pyc 	modified:   base/migrations/__pycache__/0001_initial.cpython-312.pyc 	modified:   base/migrations/__pycache__/0002_user_avatar_user_bio_alter_user_email_and_more.cpython-312.pyc 	modified:   base/migrations/__pycache__/0003_alter_user_managers_user_start_date_alter_user_bio_and_more.cpython-312.pyc 	modified:   base/migrations/__pycache__/0004_subjects_usersubjects_subjects_users.cpython-312.pyc 	modified:   base/migrations/__pycache__/0005_alter_usersubjects_last_study.cpython-312.pyc 	modified:   base/migrations/__pycache__/0006_usersubjects_correct_questions_and_more.cpython-312.pyc 	modified:   base/migrations/__pycache__/0007_rename_correct_questions_usersubjects_correct_answers_and_more.cpython-312.pyc 	modified:   base/migrations/__pycache__/0008_alter_usersubjects_last_study.cpython-312.pyc 	modified:   base/migrations/__pycache__/0009_alter_usersubjects_correct_answers_and_more.cpython-312.pyc 	modified:   base/migrations/__pycache__/0010_alter_usersubjects_last_study.cpython-312.pyc 	modified:   base/migrations/__pycache__/__init__.cpython-312.pyc 	modified:   base/templates/base/home.html 	modified:   base/templates/base/login.html 	modified:   base/templates/base/register.html 	modified:   base/templates/base/subjects.html 	modified:   db.sqlite3 	modified:   focai/__pycache__/__init__.cpython-312.pyc 	modified:   focai/__pycache__/settings.cpython-312.pyc 	modified:   focai/__pycache__/urls.cpython-312.pyc 	modified:   focai/__pycache__/wsgi.cpython-312.pyc 	modified:   templates/main.html 	modified:   templates/navbar.html 	modified:   utils/__pycache__/studies.cpython-312.pyc

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,6 +1,6 @@
 {% extends "main.html" %}
 
-{% block title %}FOCAI{% endblock title %}
+{% block title %}Foca AI | Home{% endblock title %}
 
 {% block content %}
     <div class="content">
