--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -1,5 +1,7 @@
 {% extends 'main.html' %}
 
+{% block title %}Foca AI | Register{% endblock title %}
+
 {% block content %}
 
 <main class="register">
