--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
             <span class="material-symbols-outlined">menu</span>
         </btn>
     </div>
-    <a href="{% url 'home' %}" class="symbol"><h1>FOCAI</h1></a>
+    <a href="{% url 'home' %}" class="symbol"><h1>FocaAI</h1></a>
 </div>
 
 <div class="header_utilities">
