--- a/base/templates/base/subjects.html
+++ b/base/templates/base/subjects.html
@@ -1,5 +1,7 @@
 {% extends "main.html" %}
 
+{% block title %}Foca AI | Disciplinas{% endblock title %}
+
 {% block content %}
 
 <main class = subjects>
